--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,7 +45,7 @@ body {
   line-height: 20px;
 }
 
-.server-content p {
+.server-content p:not(:last-child) {
   margin-bottom: 1em;
 }
 
